--- a/custom_components/rfplayer/services.yaml
+++ b/custom_components/rfplayer/services.yaml
@@ -96,3 +96,14 @@ set_device_platform:
               - "sensor"
               - "switch"
           mode: dropdown
+
+test_frame:
+  description: Test a frame inside RFPlayer.
+  fields:
+    frame:
+      name: Frame
+      description: The frame to test.
+      required: true
+      example: 'ZIA33{ "frame" :{"header": {"frameType": "0", "cluster": "0", "dataFlag": "0", "rfLevel": "-91", "floorNoise": "-107", "rfQuality": "4", "protocol": "5", "protocolMeaning": "OREGON", "infoType": "4", "frequency": "433920"},"infos": {"subType": "0", "id_PHY": "0x1A2D", "id_PHYMeaning": "THGR122/228/238/268,THGN122/123/132", "adr_channel": "22274",  "adr": "87",  "channel": "2",  "qualifier": "33",  "lowBatt": "1", "measures" : [{"type" : "temperature", "value" : "+21.3", "unit" : "Celsius"}, {"type" : "hygrometry", "value" : "58", "unit" : "%"}]}}}'
+      selector:
+        text:
