--- a/custom_components/rfplayer/manifest.json
+++ b/custom_components/rfplayer/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "rfplayer",
   "name": "GCE RFPlayer",
-  "documentation": "https://github.com/gce-electronics/HA_RFPlayer",
-  "issue_tracker": "https://github.com/gce-electronics/HA_RFPlayer/issues",
+  "documentation": "https://github.com/crazymikefra/HA_RFPlayer",
+  "issue_tracker": "https://github.com/crazymikefra/HA_RFPlayer/issues",
   "config_flow": true,
   "requirements": ["pyserial==3.5", "pyserial-asyncio==0.5"],
-  "codeowners": ["@Aohzan","@Crazymikefra"],
+  "codeowners": ["@Crazymikefra"],
   "dependencies": [],
   "iot_class": "assumed_state",
-  "version": "0.5.0"
+  "version": "1.0.0"
 }
