Synchro 02-04-2023 - Travail sur suppression entités + correction bugs

--- a/custom_components/rfplayer/services.yaml
+++ b/custom_components/rfplayer/services.yaml
@@ -118,3 +118,14 @@ test_frame:
       example: 'ZIA33{ "frame" :{"header": {"frameType": "0", "cluster": "0", "dataFlag": "0", "rfLevel": "-91", "floorNoise": "-107", "rfQuality": "4", "protocol": "5", "protocolMeaning": "OREGON", "infoType": "4", "frequency": "433920"},"infos": {"subType": "0", "id_PHY": "0x1A2D", "id_PHYMeaning": "THGR122/228/238/268,THGN122/123/132", "adr_channel": "22274",  "adr": "87",  "channel": "2",  "qualifier": "33",  "lowBatt": "1", "measures" : [{"type" : "temperature", "value" : "+21.3", "unit" : "Celsius"}, {"type" : "hygrometry", "value" : "58", "unit" : "%"}]}}}'
       selector:
         text:
+
+remove_entity:
+  description: Send device raw command through RFPlayer.
+  fields:
+    id:
+      name: Entity ID
+      description: The ID of the entity
+      required: true
+      selector:
+        entity:
+          integration : rfplayer
