--- a/custom_components/rfplayer/manifest.json
+++ b/custom_components/rfplayer/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "rfplayer",
-  "name": "GCE RFPlayer",
-  "documentation": "https://github.com/crazymikefra/HA_RFPlayer",
-  "issue_tracker": "https://github.com/crazymikefra/HA_RFPlayer/issues",
+  "name": "Dev GCE RFPlayer",
+  "documentation": "https://github.com/prahal/HA_RFPlayer",
+  "issue_tracker": "https://github.com/prahal/HA_RFPlayer/issues",
   "config_flow": true,
   "requirements": ["pyserial==3.5", "pyserial-asyncio==0.5"],
-  "codeowners": ["@Crazymikefra"],
+  "codeowners": ["@prahal"],
   "dependencies": [],
   "iot_class": "assumed_state",
   "version": "1.0.0"
